<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <View
        android:id="@+id/app_bar"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:background="@color/eerie_black"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_click"
        android:clickable="true"
        android:contentDescription="@null"
        android:elevation="8dp"
        android:focusable="true"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_click"
        android:clickable="true"
        android:contentDescription="@null"
        android:elevation="8dp"
        android:focusable="true"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/avatar_img"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/avatar_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/image_overlay"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/avatar"
        app:layout_constraintStart_toStartOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar" />


    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/the_chance"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <TextView
        android:id="@+id/subscriber_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_812_subscribers"
        android:textColor="@color/old_grey"
        android:textSize="8sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@id/profile_name" />


    <LinearLayout
        android:id="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/eerie_black_dark"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/cadet_grey" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_me_thechance101"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                app:drawableEndCompat="@drawable/baseline_qr_code_24" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_link"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/old_grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/eerie_black_dark"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/notifications"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:thumbTint="@color/cadet_grey"
                    app:trackTint="@color/cadet_grey" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/old_grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:background="@color/eerie_black_dark"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:text="@string/media"
                android:textColor="@color/cadet_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:text="@string/files"
                android:textColor="@color/old_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/links"
                android:textColor="@color/old_grey" />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="5">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/avatar_img" />
        </GridLayout>

    </LinearLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>